--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,92 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .card {
+    background-color: white;
+    border-radius: theme("borderRadius.2xl");
+    overflow: hidden;
+    width: 100%;
+    max-width: 21.875rem;
+    background-image: url(images/bg-pattern-card.svg);
+    background-repeat: no-repeat;
+    padding-top: 5.5rem;
+    text-align: center;
+  }
+
+  .card__img {
+    border-radius: theme("borderRadius.full");
+    margin-inline: auto;
+    border: 0.3125rem solid white;
+  }
+
+  .card__title {
+    font-weight: bold;
+    color: theme("colors.p-very-dark-desaturated-blue");
+    margin-top: 1rem;
+  }
+
+  .card__title span {
+    font-weight: normal;
+    color: theme("colors.n-dark-gray");
+    display: inline-block;
+    margin-left: 0.75rem;
+  }
+
+  .card__subtitle {
+    color: theme("colors.n-dark-gray");
+    font-size: theme("fontSize.sm");
+    margin-top: 0.25rem;
+  }
+
+  .stats {
+    display: flex;
+    justify-content: space-around;
+    border-top: 1px solid hsl(0, 0%, 90%);
+    padding-block: 1.4rem;
+    margin-top: 1.5rem;
+    padding-inline: 1.5rem;
+  }
+
+  .stat__number {
+    color: theme("colors.p-very-dark-desaturated-blue");
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .stat__copy {
+    color: theme("colors.p-dark-grayish-blue");
+    font-size: 0.65rem;
+    letter-spacing: 0.15rem;
+    margin-top: 0.03rem;
+  }
+}
+
+body {
+  background-color: theme("colors.p-dark-cyan");
+  background-image: url(images/bg-pattern-top.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: left -12rem top -8rem;
+}
+
+main {
+  background-image: url(images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-size: 100%;
+  background-position: right -12rem bottom -8rem;
+}
+
+@media (min-width: theme("screens.xl")) {
+  body {
+    background-size: 50%;
+    background-position: top -15rem left -4rem;
+  }
+
+  main {
+    background-size: 50%;
+    background-position: bottom -20rem  right -4rem;
+  }
+}
